<resources>
    <string name="app_name">kolatest</string>
    <string name="title_activity_acceuil">Acceuil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="currency">XAF</string>
    <string name="selectDate">select a date</string>
    <string name="noteText">ajouter une note</string>
    <string name="selectImage">add a image</string>
    <string name="repeat">repeat</string>
    <string name="wallet"><![CDATA[wallet & account]]></string>
    <string name="walletName">protefeuille de tresorerie</string>
    <string name="walleztAmount">12000 FCFA</string>
    <string name="connect_banc">CONNECT TO BANC</string>
    <string name="add_wallet">ADD CASH WALLET</string>
    <string name="empty_fields">some required fields are empty</string>
    <string name="bord_chart">bord and charts</string>
    <string name="budgets">my budgets</string>
    <string name="activity">my activity</string>
    <string name="more_settings">more and settings</string>
    <string name="application_name">Kola Test</string>
    <string name="description">Spendee clone for Kolafin evaluation test</string>
    <string name="wellcom">wellcome</string>
    <string name="kola">powered by kolaFin</string>
    <string name="sending_data">sending data ...</string>
    <string name="wallet_creation">wallet creation</string>
    <string name="wallet_created">wallet created successfully</string>
    <string name="error_sending_document">error sending the document</string>
    <string name="loading">saving data .....</string>
    <string name="add_frequency">add a freequency</string>
    <string name="transaction_created">transaction perfectly creared</string>
    <string name="transaction_amount">1000</string>
    <string name="date">11/11/2011</string>
    <string name="choose_wallet">choose a wallet</string>

    <string-array name="country_arrays">
        <item>dayly</item>
        <item>monthly</item>
        <item>year</item>
        <item>never</item>
    </string-array>

</resources>
